style: High-contrast fixes and color adjustments
- pull in the palette changes to the HC css
- adjust the color definitions for HC
- address some of the problems with hover states in HC
- reworked drawing functions for HC

Part-of: <https://gitlab.gnome.org/GNOME/gnome-shell/-/merge_requests/2284>
(cherry picked from commit 8713f9d8788e4c4936fa6b453b7be9d1d0879d66)

--- a/data/theme/gnome-shell-sass/widgets/_looking-glass.scss
+++ b/data/theme/gnome-shell-sass/widgets/_looking-glass.scss
@@ -9,7 +9,7 @@
   color: $osd_fg_color;
   padding: $base_padding;
   spacing: $base_padding;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px 0 $shadow_color;
 
   & > #Toolbar {
     border: none;
